# Procurement-Tracker

./: README.md
backend/: .dockerignore  db.sqlite3  docker-compose.yml  dockerfile  pyproject.toml
backend/main/: asgi.py  settings.py  urls.py
backend/procurement/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
backend/procurement/migrations/: 0001_initial.py  0002_delete_inventory_delete_purchaserequest.py  0003_initial.py
frontend/: docker-compose.yml  dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: NavBar.jsx
frontend/src/hooks/: useInventoryWebSocket.js  useProcurement.js
frontend/src/pages/: Dashboard.jsx  Items.jsx  PurchaseRequests.jsx  Suppliers.jsx
